# Masters

./: Machine_Learning_Finance.ipynb  README.md
Deep Learning-Based Driving Behavior Analysis/: Presentation.pptx  README.md  cnn-lstm.ipynb  lstm-classification.ipynb
Deep-Learning-Based-Driving-Behavior-Analysis/: README.md  cnn-lstm.ipynb  conv-lstm.ipynb
Diabetes Prediction System/: GlycoCheckUI.ipynb  GlycoCheckUI.py  README.md  app.py  logistic_regression.pkl
Diabetes-Prediction-System/: GlycoCheck.ipynb  app.ipynb  pyproject.toml  scaler.pkl  xgboost.pkl
Multi-Model-ML-SP500-Monthly-Returns/: MUlti-model_analysis.ipynb  Presentation.pptx
Multi_Model_ML_SP500_Monthly_Returns/: README.md
StressTrack-Mental-Health-Analytics/: Dashboard.ipynb  README.md  StressTrack.ipynb  dashboard.py  pyproject.toml  requirements.txt.rtf
SupplyChain-Revenue-Forecasting-Pipeline/: README.md  cleaned_supply_chain_data.csv  final_model_results.csv  model_pipeline.py  pipeline.py  run_model.py  supply_chain_etl.py  supply_chain_revenue_model.pkl
Supply_Chain_Revenue_Forecasting_Pipeline/: README.md  deploy_model_dag.py  eda_supply_chain.py  process_data_dag.py  pyproject.toml
ThyroPredict/: README.md  ThyroPredict_Flask_app.ipynb  ThyroPredict_Flask_app.py  ThyroPredict_app.ipynb  ThyroPredict_app.py  final_xgb_model.pkl  final_xgb_model_threshold_0.4.pkl  fnn_trained_model.h5  pyproject.toml
Visualizing-Insights-with-Tableau/: Presentation.pptx  README.md  Tableau_file.twb
